display image name & prevent overflow past margin

--- a/src/post-log-in/business-assets/assets.css
+++ b/src/post-log-in/business-assets/assets.css
@@ -1,16 +1,20 @@
 .img-asset {
   max-width: 300px;
   max-height: 250px;
-  margin: 20px;
+}
+
+.img-info {
+  padding: 20px;
 }
 
 #img-holder {
   display: flex;
   align-items: center;
-  justify-content: center;
   overflow-x: scroll;
   width: 80vw;
   margin-bottom: 2vh;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 #assets-page {
